[gd_scene load_steps=18 format=4 uid="uid://cjanwm3sy2x37"]

[ext_resource type="PackedScene" uid="uid://cyti38f0lagf2" path="res://Scenes/Prefabs/LevelFinishDoor.tscn" id="1_oqkjg"]
[ext_resource type="PackedScene" uid="uid://bjb3dx2x4bocm" path="res://Scenes/Levels/Level_02.tscn" id="2_0ac5u"]
[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Scenes/Prefabs/player.tscn" id="2_pay8t"]
[ext_resource type="PackedScene" uid="uid://bfmh3fm2de78o" path="res://Scenes/Prefabs/Coin.tscn" id="3_rrh80"]
[ext_resource type="Script" uid="uid://b44aojg1wbe58" path="res://Scripts/GameManager.gd" id="4_vgfkr"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="5_wqbaa"]
[ext_resource type="Script" uid="uid://b3eweo1odt4od" path="res://Scripts/GameUI.gd" id="6_66mfc"]
[ext_resource type="Texture2D" uid="uid://clreg520jah1j" path="res://Assets/platformPack_item008.png" id="7_j7jun"]
[ext_resource type="FontFile" uid="uid://qgc4vi5osk7v" path="res://Assets/Fonts/Star Choco.ttf" id="8_gwcy2"]
[ext_resource type="Texture2D" uid="uid://621as0fwjhum" path="res://Assets/Textures/star_07.png" id="10_1bssr"]
[ext_resource type="PackedScene" uid="uid://d1pf0tksqtxyj" path="res://Scenes/Prefabs/rabbit.tscn" id="10_5vjlm"]
[ext_resource type="PackedScene" uid="uid://wi2u2cuco683" path="res://Scenes/Prefabs/goblin.tscn" id="12_aksfc"]
[ext_resource type="PackedScene" uid="uid://dnoshi376cqqx" path="res://Scenes/Prefabs/Ingredient.tscn" id="13_5pmb1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gs0qk"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 16, -32, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 0, -32, 0)
4:0/0 = 0
4:1/0 = 0
5:0/0 = 0
5:1/0 = 0
2:5/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_ywwrl"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_gs0qk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rndpx"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_2fcbi"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_rndpx")

[node name="Level_01" type="Node2D"]

[node name="LevelFinishDoor" parent="." instance=ExtResource("1_oqkjg")]
z_index = 1
position = Vector2(5354, 143)
next_scene = ExtResource("2_0ac5u")

[node name="Player" parent="." instance=ExtResource("2_pay8t")]
z_index = 1
position = Vector2(150, 318)
max_speed = 300.0
acceleration = 1500.0
max_run_speed = 700.0
air_control = 1.5

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(16, 36)
limit_left = 0
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(576, 406)

[node name="Coin2" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(712, 353)

[node name="Coin3" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(844, 408)

[node name="Level" type="Node2D" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(173.925, 83)

[node name="Ground" type="TileMapLayer" parent="Level" groups=["Ground"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAAAAgAAAADAAAAAAAAAAkAAAADAAAAAAABAAkAAAADAAAAAAACAAkAAAADAAAAAAADAAkAAAADAAAAAAAEAAkAAAADAAAAAAAEAAoAAAADAAAAAAADAAoAAAADAAAAAAACAAoAAAADAAAAAAABAAoAAAADAAAAAAAAAAoAAAADAAAAAAABAAgAAAADAAAAAAACAAgAAAADAAAAAAADAAgAAAADAAAAAAAEAAgAAAADAAAAAAANAAcAAAAAAAAAAAANAAgAAAADAAAAAAANAAkAAAADAAAAAAANAAoAAAADAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAADAAAAAAAOAAkAAAADAAAAAAAOAAoAAAADAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAADAAAAAAAPAAkAAAADAAAAAAAPAAoAAAADAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAADAAAAAAAQAAkAAAADAAAAAAAQAAoAAAADAAAAAAARAAcAAAAAAAAAAAARAAgAAAADAAAAAAARAAkAAAADAAAAAAARAAoAAAADAAAAAAASAAcAAAAAAAAAAAASAAgAAAADAAAAAAASAAkAAAADAAAAAAASAAoAAAADAAAAAAATAAcAAAAAAAAAAAATAAgAAAADAAAAAAATAAkAAAADAAAAAAATAAoAAAADAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAADAAAAAAAUAAkAAAADAAAAAAAUAAoAAAADAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAADAAAAAAAVAAkAAAADAAAAAAAVAAoAAAADAAAAAAAKAAoAAAADAAAAAAALAAoAAAADAAAAAAAMAAoAAAADAAAAAAAFAAoAAAADAAAAAAAGAAoAAAADAAAAAAAHAAoAAAADAAAAAAAIAAoAAAADAAAAAAAJAAoAAAADAAAAAAAFAAcAAAAAAAIAAAAIAAcAAAAAAAIAAAAJAAcAAAAAAAIAAAAMAAcAAAAAAAIAAAD//woAAAADAAAAAAD//wkAAAADAAAAAAD//wgAAAADAAAAAAD//wcAAAADAAAAAAD//wYAAAADAAAAAAD//wUAAAADAAAAAAD//wQAAAADAAAAAAD//wMAAAADAAAAAAD//wIAAAADAAAAAAD//wEAAAADAAAAAAD//wAAAAADAAAAAAAWAAcAAAADAAAAAAAXAAcAAAADAAAAAAAYAAcAAAADAAAAAAAZAAcAAAADAAAAAAAaAAcAAAADAAAAAAAbAAcAAAADAAAAAAAcAAcAAAADAAAAAAAdAAcAAAADAAAAAAAeAAcAAAADAAAAAAAfAAcAAAADAAAAAAAgAAcAAAADAAAAAAAhAAcAAAADAAAAAAAiAAcAAAADAAAAAAAiAAgAAAADAAAAAAAiAAkAAAADAAAAAAAiAAoAAAADAAAAAAAhAAoAAAADAAAAAAAgAAoAAAADAAAAAAAfAAoAAAADAAAAAAAeAAoAAAADAAAAAAAdAAoAAAADAAAAAAAcAAoAAAADAAAAAAAbAAoAAAADAAAAAAAaAAoAAAADAAAAAAAZAAoAAAADAAAAAAAYAAoAAAADAAAAAAAXAAoAAAADAAAAAAAWAAoAAAADAAAAAAAWAAkAAAADAAAAAAAWAAgAAAADAAAAAAAXAAgAAAADAAAAAAAYAAgAAAADAAAAAAAZAAgAAAADAAAAAAAaAAgAAAADAAAAAAAbAAgAAAADAAAAAAAcAAgAAAADAAAAAAAdAAgAAAADAAAAAAAeAAgAAAADAAAAAAAfAAgAAAADAAAAAAAgAAgAAAADAAAAAAAhAAgAAAADAAAAAAAhAAkAAAADAAAAAAAgAAkAAAADAAAAAAAfAAkAAAADAAAAAAAeAAkAAAADAAAAAAAdAAkAAAADAAAAAAAcAAkAAAADAAAAAAAbAAkAAAADAAAAAAAaAAkAAAADAAAAAAAZAAkAAAADAAAAAAAYAAkAAAADAAAAAAAXAAkAAAADAAAAAAAWAAYAAAAAAAAAAAAXAAYAAAAAAAAAAAAYAAYAAAAAAAAAAAAZAAYAAAAAAAAAAAAaAAUAAAAAAAAAAAAbAAUAAAAAAAAAAAAcAAQAAAAAAAAAAAAdAAQAAAAAAAAAAAAeAAQAAAAAAAAAAAAfAAMAAAAAAAAAAAAgAAMAAAAAAAAAAAAhAAIAAAAAAAAAAAAiAAIAAAAAAAAAAAAjAAIAAAAAAAAAAAAaAAYAAAADAAAAAAAbAAYAAAADAAAAAAAcAAYAAAADAAAAAAAdAAYAAAADAAAAAAAeAAYAAAADAAAAAAAfAAYAAAADAAAAAAAgAAYAAAADAAAAAAAhAAYAAAADAAAAAAAiAAYAAAADAAAAAAAjAAYAAAADAAAAAAAjAAUAAAADAAAAAAAjAAQAAAADAAAAAAAjAAMAAAADAAAAAAAiAAQAAAADAAAAAAAiAAUAAAADAAAAAAAiAAMAAAADAAAAAAAhAAMAAAADAAAAAAAhAAQAAAADAAAAAAAhAAUAAAADAAAAAAAgAAUAAAADAAAAAAAgAAQAAAADAAAAAAAfAAQAAAADAAAAAAAfAAUAAAADAAAAAAAeAAUAAAADAAAAAAAdAAUAAAADAAAAAAAcAAUAAAADAAAAAAASAAMAAAAAAAIAAAATAAMAAAAAAAIAAAAUAAMAAAAAAAIAAAAMAAIAAAAAAAIAAAANAAIAAAAAAAIAAAAOAAIAAAAAAAIAAAAGAAMAAAAAAAIAAAAHAAMAAAAAAAIAAAABAAIAAAAAAAIAAAACAAIAAAAAAAIAAAADAAIAAAAAAAIAAAAkAAQAAAADAAAAAAAlAAQAAAADAAAAAAAmAAQAAAADAAAAAAAnAAQAAAADAAAAAAAoAAQAAAADAAAAAAApAAQAAAADAAAAAAAqAAQAAAADAAAAAAArAAQAAAADAAAAAAAsAAQAAAADAAAAAAAtAAQAAAADAAAAAAAuAAQAAAADAAAAAAAvAAQAAAADAAAAAAAwAAQAAAADAAAAAAAwAAMAAAADAAAAAAAxAAMAAAADAAAAAAAyAAMAAAADAAAAAAAzAAMAAAADAAAAAAA0AAMAAAADAAAAAAA1AAMAAAADAAAAAAA2AAMAAAADAAAAAAA3AAMAAAADAAAAAAA4AAMAAAADAAAAAAA5AAMAAAADAAAAAAA6AAMAAAADAAAAAAA7AAMAAAADAAAAAAA8AAMAAAADAAAAAAA9AAMAAAADAAAAAAA9AAIAAAADAAAAAAA9AAEAAAADAAAAAAA+AAEAAAADAAAAAAA/AAEAAAADAAAAAABAAAEAAAADAAAAAABBAAEAAAADAAAAAABBAAIAAAADAAAAAABCAAIAAAADAAAAAABAAAIAAAADAAAAAAA/AAIAAAADAAAAAAA+AAIAAAADAAAAAABCAAEAAAADAAAAAABDAAEAAAADAAAAAABEAAEAAAADAAAAAABFAAEAAAADAAAAAABGAAEAAAADAAAAAABHAAEAAAADAAAAAABHAAIAAAADAAAAAABIAAIAAAADAAAAAABGAAIAAAADAAAAAABFAAIAAAADAAAAAABEAAIAAAADAAAAAABDAAIAAAADAAAAAABJAAIAAAADAAAAAABKAAIAAAADAAAAAABKAAMAAAADAAAAAABLAAMAAAADAAAAAABLAAQAAAADAAAAAABMAAQAAAADAAAAAABNAAQAAAADAAAAAABOAAQAAAADAAAAAABPAAQAAAADAAAAAABQAAQAAAADAAAAAABRAAQAAAADAAAAAABSAAQAAAADAAAAAABTAAQAAAADAAAAAABUAAQAAAADAAAAAABVAAQAAAADAAAAAABVAAMAAAADAAAAAABVAAIAAAADAAAAAABVAAEAAAADAAAAAABVAAAAAAADAAAAAABVAP//AAADAAAAAABVAP7/AAADAAAAAABVAP3/AAADAAAAAABVAPz/AAADAAAAAABVAPv/AAAAAAAAAABUAAMAAAAAAAAAAABTAAMAAAAAAAAAAABSAAMAAAAAAAAAAABRAAMAAAAAAAAAAABQAAMAAAAAAAAAAABPAAMAAAAAAAAAAABOAAMAAAAAAAAAAABNAAMAAAAAAAAAAABMAAMAAAAAAAAAAABLAAIAAAAAAAAAAABKAAEAAAAAAAAAAABJAAEAAAAAAAAAAABIAAEAAAAAAAAAAAA9AAAAAAAAAAAAAAA+AAAAAAAAAAAAAAA/AAAAAAAAAAAAAABBAAAAAAAAAAAAAABAAAAAAAAAAAAAAABCAAAAAAAAAAAAAABDAAAAAAAAAAAAAABEAAAAAAAAAAAAAABFAAAAAAAAAAAAAABGAAAAAAAAAAAAAABHAAAAAAAAAAAAAAA8AAIAAAAAAAAAAAA7AAIAAAAAAAAAAAA6AAIAAAAAAAAAAAA5AAIAAAAAAAAAAAA4AAIAAAAAAAAAAAA3AAIAAAAAAAAAAAA2AAIAAAAAAAAAAAA1AAIAAAAAAAAAAAA0AAIAAAAAAAAAAAAzAAIAAAAAAAAAAAAyAAIAAAAAAAAAAAAxAAIAAAAAAAAAAAAwAAIAAAAAAAAAAAAvAAMAAAAAAAAAAAAuAAMAAAAAAAAAAAAtAAMAAAAAAAAAAAAsAAMAAAAAAAAAAAArAAMAAAAAAAAAAAAqAAMAAAAAAAAAAAApAAMAAAAAAAAAAAAoAAMAAAAAAAAAAAAnAAMAAAAAAAAAAAAmAAMAAAAAAAAAAAAlAAMAAAAAAAAAAAAkAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ywwrl")

[node name="Traps" type="TileMapLayer" parent="Level" groups=["Traps"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAAMAAkAAAAAAAUAAAALAAkAAAAAAAUAAAAKAAkAAAAAAAUAAAAJAAkAAAAAAAUAAAAIAAkAAAAAAAUAAAAHAAkAAAAAAAUAAAAGAAkAAAAAAAUAAAAFAAkAAAAAAAUAAAA=")
tile_set = SubResource("TileSet_2fcbi")

[node name="TutorialText" type="Node2D" parent="."]

[node name="Movement" type="Label" parent="TutorialText"]
offset_left = 264.0
offset_top = 336.0
offset_right = 542.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "A & D To Move
Spacebar To Jump"

[node name="SetNextScene" type="Label" parent="TutorialText"]
offset_left = 808.0
offset_top = 256.0
offset_right = 1239.0
offset_bottom = 382.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "Level Finish
Set the next scene
from \"LevelFinishDoor\" Area"

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("4_vgfkr")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_66mfc")

[node name="Score" type="Control" parent="UserInterface/GameUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreTexture" type="TextureRect" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 116.0
texture = ExtResource("7_j7jun")
stretch_mode = 4

[node name="ScoreLabel" type="Label" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 42.0
offset_right = 148.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "x 3"

[node name="PlayerHealth" type="Control" parent="UserInterface/GameUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 56.0
offset_bottom = 50.0

[node name="Heart" type="TextureRect" parent="UserInterface/GameUI/PlayerHealth"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_1bssr")

[node name="Heart2" type="TextureRect" parent="UserInterface/GameUI/PlayerHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 41.99997
offset_top = -1.9999999
offset_right = 554.0
offset_bottom = 510.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_1bssr")

[node name="Heart3" type="TextureRect" parent="UserInterface/GameUI/PlayerHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 82.99994
offset_top = -1.9999999
offset_right = 594.99994
offset_bottom = 510.0
grow_horizontal = 0
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_1bssr")

[node name="Rabbit" parent="." instance=ExtResource("10_5vjlm")]
position = Vector2(1011, 370)

[node name="Goblin" parent="." instance=ExtResource("12_aksfc")]
position = Vector2(2716, 124)

[node name="Ingredient" parent="." instance=ExtResource("13_5pmb1")]
position = Vector2(217, 79)

[node name="Ingredient2" parent="." instance=ExtResource("13_5pmb1")]
position = Vector2(4428, -50)

[connection signal="health_changed" from="Player" to="UserInterface/GameUI" method="_on_player_health_changed"]
[connection signal="collected" from="Ingredient" to="LevelFinishDoor" method="_on_ingredient_collected"]
[connection signal="collected" from="Ingredient2" to="LevelFinishDoor" method="_on_ingredient_2_collected"]
